--- a/_posts/2022-12-11-first.md
+++ b/_posts/2022-12-11-first.md
@@ -1,15 +1,10 @@
 ---
 layout: single
-title: "javascript"
+title: "변수"
 categories: javascript
 toc : true
 ---
 
-## 첫번째 블로그 글 입니다.
+## 변수란?
 
-javascript.
-
-### 안녕하세요.
-안녕하세요. 기능 테스트 중입니다.
-#### js
-안녕하세요. 기능 테스트 중입니다.
+메모리에 저장된 값에 직접 접근할 수 없어, 저장된 값에  대신 사용하는 것이 변수다.
