--- a/_posts/2022-12-11-TIL.md
+++ b/_posts/2022-12-11-TIL.md
@@ -3,11 +3,12 @@ layout: single
 title: "코드스쿼드 프리코스 이후 2022-12-11까지의 회고"
 categories: 회고
 toc : true
+toc_sticky: true
 toc_label: " "
 toc_icon: " " 
 ---
 
-## 코드스쿼드 프리코스 때의 감정
+## **코드스쿼드 프리코스 때의 감정**
 
 *2022-10-31 ~ 2022-11-25*
 
@@ -24,26 +25,26 @@ toc_icon: " "
 그렇다. 취준을 위해서라도, 아니면 개인적인 개발 공부를 위해서라도, 결국 공부는 계속 할 것 이기에.. 
 (이번 주 부터 공부할 내용들도 프리코스 때 공부한 내용들을 많이 포함하고 있다.)
 
-## 코드스쿼드 마스터즈코스 테스트 준비 과정
+## **코드스쿼드 마스터즈코스 테스트 준비 과정**
 
 *2022-11-26 ~ 2022-12-04*
-### 준비 전략
+### **준비 전략**
 
-프리코스 과정이 끝나고 우리에겐 테스트까지 10일 정도의 시간이 있었는데, 10일의 시간을 효율적으로 활용하기 위해 테스트를 대비하는 여러가지 전략들을 고민 했다.
+프리코스 과정이 끝나고 우리에겐 테스트까지 10일 정도의 시간이 있었다. 그래서 이 시간을 어떻게 하면 잘 활용할 수 있을까? 라는 생각을 가지고 테스트 대비 전략을 고민했다.
 
 1. 개념 공부하기
 2. 프리코스 때 배운 내용 복습
 3. 알고리즘 공부
 4. 마스터즈 코스 지난 년도 테스트 구현 등
 
-동료들마다 원하는 학습 방향이 달라서, 마음이 맞는 분들끼리 스터디를 결성했다. 아래와 같은 이유들 때문에 나는 4번 전략을 선택했다.
+동료들마다 원하는 학습 방향도 다르고 생각보다 시간이 길지 않았기 때문에, 같은 전략을 선택한 분들끼리 스터디를 결성했다. 아래와 같은 이유들 때문에 나는 4번 전략을 선택했다.
 
 1. 연습은 실전처럼!
-2. 시험 때와 동일한 기간을 주고(3일) 구현 문제를 풀어보면 시험 때 더 요구사항들을 수월하게 진행할 수 있지 않을까?
+2. 시험 때와 동일한 기간을 주고(3일) 구현 문제를 풀어보면 시험 때 긴장하지 않고 더 수월하게 진행할 수 있지 않을까?
 3. 구현 문제로 준비할 때, gist/github/readme.md 를 다뤄볼 수 있다는 장점 
 
 
-### 전략 이행
+### **전략 이행**
 
 10일간 2개년 기출문제인 '단계별 소코반 구현하기' 와 '루빅스 큐브 구현하기' 를 풀었다.
 구현한 코드들은 각자 gist에 업로드 하고, gist 링크들을 스터디용 노션을 따로 만들어서 거기에 업로드하는 방식을 채택했다. 
@@ -52,15 +53,20 @@ toc_icon: " "
 
 리뷰가 끝나고 남은 시간 동안 github 다루기와 readme 작성에 익숙해지기 위해 이것 저것 해보면서 친해지는 연습을 했다.(지금보니 익숙해지는 연습 안 했더라면, 본 test 때 엄청 당황하고 시간 낭비도 심했을 것 같다..) 
 
-### 아쉬웠던 부분
+### **아쉬웠던 부분**
 
 1. 예상하기 미흡: 문제의 요구사항들을 보고 출제의도를 파악한 후, 구현 흐름을 예상해서 따로 글로 정리하고 구현을 시작하려 했지만, 막상 문제를 접하고 나서 큰 틀만 잡고 구현을 시작했다.
 2. 시간 분배 실패: 문제의 요구사항들을 점검하고, 구현을 진행했는데, 예상보다 고민할 내용도 많았고 구현 문제가 처음이다 보니 시간 분배에 실패했다. 결국 문제 2개 모두 리드미 작성을 못 하고 코드만 제출 했다.
 3. 리팩토링 미진행: 팀원들과 코드 리뷰를 진행하고 나서, 내 코드를 리팩토링할 수 있는 시간이 분명 있었지만, 다음 문제를 빨리 풀어보고 싶은 마음에 리팩토링을 진행하지 않고 다음 문제로 넘어갔다.
 
-## 스터디 결성
+## **스터디 결성**
 
 *2022-12-11*
 
 코드스쿼드 프리코스가 끝나고, 마스터즈 코스 테스트를 마무리한 이후 무엇을 공부할까 고민했다. 고민하고 있는 와중에, 프리코스 때 함께 했던 동료분들도 비슷한 고민을 하고 있었다는걸 알게 됐고, 그래서 우리는 스터디를 결성해 짧게는 3주간 어떤 공부를 할지 고민했다.
 고민한 끝에 우리는 크게 **js 개념 공부** 와 **CS50** 두 파트로 나눠서 스터디를 진행하기로 결정했다. 각 파트를 공부하고 나서 매일 블로그에 TIL로 올릴 예정이다.
+
+
+
+
++) 스터디 진행과 주도를 해준 jace, ethan, 나니, dy 그리고 프리코스를 함께한 모든 분들께(특히 마제님) 감사의 말씀 드립니다.
