기능: page 내 tag 추가

--- a/_posts/2022-12-11-TIL.md
+++ b/_posts/2022-12-11-TIL.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title: "코드스쿼드 프리코스 이후 2022-12-11까지의 회고"
+title: "코드스쿼드 프리코스 ~ 2022-12-11 회고"
 categories: 회고
+tag: [회고, 코드스쿼드, 프리코스]
 toc : true
 toc_sticky: true
 toc_label: " "
