--- a/_posts/2022-12-11-TIL.md
+++ b/_posts/2022-12-11-TIL.md
@@ -7,6 +7,8 @@ toc : true
 toc_sticky: true
 toc_label: " "
 toc_icon: " " 
+header:
+  teaser: /assets/images/회고.jpg
 ---
 
 ## **코드스쿼드 프리코스 때의 감정**
