글: 내용 수정

--- a/_posts/2022-12-12-second.md
+++ b/_posts/2022-12-12-second.md
@@ -1,12 +1,15 @@
 ---
 layout: single
-title: "Scratch"
+title: "CS50 2020 - Lecture 0 - Scratch"
 categories: CS50
 toc : true
 toc_label: " "
 toc_icon: " " 
 ---
 
-### Scratch
+[CS50 2020 - Lecture 0 - Scratch](https://www.youtube.com/watch?v=mLNZuZPavU0&list=PLSpnHWTONcJ0yu08sVeiBNynseNlFXhPq)
 
-...
+> 00:00:00 ~ 00:54:29 까지 영상을 보고 느낀 여러가지 생각들을 정리했습니다.
+
+
+## 들어가기에 앞서.
