--- a/_posts/2022-12-11-TIL.md
+++ b/_posts/2022-12-11-TIL.md
@@ -17,7 +17,7 @@ header:
 
 비전공자인 나는 1달간의 프리코스를 진행하면서, 항상 불안감이 마음 속 깊이 있었는데.. 
 
-'개념 공부를 너무 안 하고 그냥 넘어가는건 아닌가?'  
+'개념 공부를 너무 안 하고 그냥 넘어간건 아닌가?'  
 '일단 구현을 목표로 하자! 깊이 있는 공부나 복습은 나중의 나에게 맡기지 머...'
 
 이런 생각들이 과정 내내 지속 됐고, 결국 복습은 커녕 눈 앞에 있는 미션들을 따라가다가 과정이 끝나버렸다..  
@@ -25,8 +25,7 @@ header:
 나: "마제!(프리코스 js 마스터) 공부했던 내용들에 대한 복습을 어떤식으로 할지에 대한 고민이 있어요."  
 마제: "어차피 앞으로 개발 공부하면 지금까지 공부했던 내용들 반복적으로 나오기 때문에 복습에 대해서 너무 고민할 필요 없어요 ^^" 
 
-그렇다. 취준을 위해서라도, 아니면 개인적인 개발 공부를 위해서라도, 결국 공부는 계속 할 것 이기에.. 
-(이번 주 부터 공부할 내용들도 프리코스 때 공부한 내용들을 많이 포함하고 있다.)
+그렇다. 취준을 위해서라도, 아니면 개인적인 개발 공부를 위해서라도, 결국 공부는 계속 할 것 이기에.. 앞으로 나아갈 시간도 부족한 지금, 복습 방법에 대한 고민은 일단 접기로 했다. (이번 주 부터 공부할 내용들도 프리코스 때 공부한 내용들을 많이 포함하고 있다.)
 
 ## **코드스쿼드 마스터즈코스 테스트 준비 과정**
 
@@ -40,7 +39,8 @@ header:
 3. 알고리즘 공부
 4. 마스터즈 코스 지난 년도 테스트 구현 등
 
-동료들마다 원하는 학습 방향도 다르고 생각보다 시간이 길지 않았기 때문에, 같은 전략을 선택한 분들끼리 스터디를 결성했다. 아래와 같은 이유들 때문에 나는 4번 전략을 선택했다.
+동료들마다 원하는 학습 방향도 다르고 생각보다 시간이 길지 않았기 때문에, 같은 전략을 선택한 분들끼리 스터디를 결성했다. 
+나는 고민 끝에 아래와 같은 이유들 때문에 위 전략 중 4번 전략을 선택하게 됐다.
 
 1. 연습은 실전처럼!
 2. 시험 때와 동일한 기간을 주고(3일) 구현 문제를 풀어보면 시험 때 긴장하지 않고 더 수월하게 진행할 수 있지 않을까?
@@ -54,19 +54,19 @@ header:
 
 > 10일간의 스케줄: '2박 3일 문제 구현 -> 스터디원들과 코드 리뷰 -> 2박 3일 문제 구현 -> 스티디원들과 코드 리뷰' 
 
-리뷰가 끝나고 남은 시간 동안 github 다루기와 readme 작성에 익숙해지기 위해 이것 저것 해보면서 친해지는 연습을 했다.(지금보니 익숙해지는 연습 안 했더라면, 본 test 때 엄청 당황하고 시간 낭비도 심했을 것 같다..) 
+리뷰가 끝나고 남은 시간 동안 github 다루기와 readme 작성에 익숙해지기 위해 이것 저것 해보면서 친해지는 연습을 했다. 이때의 연습으로 실전에서 gist를 다루거나 Readme 작성할 때 많은 도움이 되었다.
 
 ### **아쉬웠던 부분**
 
-1. 예상하기 미흡: 문제의 요구사항들을 보고 출제의도를 파악한 후, 구현 흐름을 예상해서 따로 글로 정리하고 구현을 시작하려 했지만, 막상 문제를 접하고 나서 큰 틀만 잡고 구현을 시작했다.
-2. 시간 분배 실패: 문제의 요구사항들을 점검하고, 구현을 진행했는데, 예상보다 고민할 내용도 많았고 구현 문제가 처음이다 보니 시간 분배에 실패했다. 결국 문제 2개 모두 리드미 작성을 못 하고 코드만 제출 했다.
+1. 예상하기 미흡: 문제의 요구사항들을 보고 출제의도를 파악한 후, 구현 흐름을 예상해서 따로 글로 정리하고 이를 바탕으로 구현을 시작하려 했다. 하지만 막상 문제를 읽고 나서 큰 틀만 글로 적었고, 세부적인 사항들은 구현하면서 정해 나갔다.  
+2. 시간 분배 실패: 예상보다 고민이 필요한 부분도 많았고, 구현 문제가 처음이다 보니 시간 분배에 실패했다. 결국 문제 2개 모두 리드미 작성을 포기하고 코드만 제출 했다.
 3. 리팩토링 미진행: 팀원들과 코드 리뷰를 진행하고 나서, 내 코드를 리팩토링할 수 있는 시간이 분명 있었지만, 다음 문제를 빨리 풀어보고 싶은 마음에 리팩토링을 진행하지 않고 다음 문제로 넘어갔다.
 
 ## **스터디 결성**
 
 *2022-12-11*
 
-코드스쿼드 프리코스가 끝나고, 마스터즈 코스 테스트를 마무리한 이후 무엇을 공부할까 고민했다. 고민하고 있는 와중에, 프리코스 때 함께 했던 동료분들도 비슷한 고민을 하고 있었다는걸 알게 됐고, 그래서 우리는 스터디를 결성해 짧게는 3주간 어떤 공부를 할지 고민했다.
+코드스쿼드 프리코스가 끝나고, 마스터즈 코스 테스트를 마무리한 이후 무엇을 공부할까 고민했다. 고민하고 있는 와중에, 프리코스 때 함께 했던 동료분들도 비슷한 고민을 하고 있었다는걸 알게 됐고, 그래서 우리는 스터디를 결성해 짧게는 3주간 어떤 공부를 할지 고민했다.(jace 팀장님, 노션 에디터 다온 감사해요!)
 고민한 끝에 우리는 크게 **js 개념 공부** 와 **CS50** 두 파트로 나눠서 스터디를 진행하기로 결정했다. 각 파트를 공부하고 나서 매일 블로그에 TIL로 올릴 예정이다.
 
 
