--- a/_posts/2022-12-11-corejs1.md
+++ b/_posts/2022-12-11-corejs1.md
@@ -8,7 +8,7 @@ toc_sticky: true
 toc_label: " "
 toc_icon: " " 
 header:
-  teaser: /assets/images/서적공부.jpg
+  teaser: /assets/images/서적공부.png
 ---
 
 > 정재남 님의 '코어 자바스크립트' 책을 읽고 정리한 글입니다.
