글: 글 작성 및 일부 스타일 변경

--- a/_posts/2022-12-11-corejs1.md
+++ b/_posts/2022-12-11-corejs1.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "코어 자바스크립트 - 데이터 타입"
+title: "[코어 자바스크립트] 데이터 타입"
 categories: javascript
 tag: [javascript, 코어 자바스크립트, 데이터 타입]
 toc : true
@@ -9,9 +9,11 @@ toc_label: " "
 toc_icon: " " 
 header:
   teaser: /assets/images/서적공부.png
+excerpt_separator: <!--more-->
 ---
 
-> 정재남 님의 '코어 자바스크립트' 책을 읽고 정리한 글입니다.
+> 정재남 님의 '코어 자바스크립트' 책을 읽고 정리한 글입니다.  
+> 필요한 내용과 정리가 덜 된 부분은 글에 지속 추가할 예정입니다.
 
 ## 데이터 타입의 종류
 
@@ -133,7 +135,7 @@ b = 7;
 
 기본형 데이터는 모두 불변값으로 보이는데, 그렇다면 참조형 데이터의 경우 모두 가변값일까? 닶은 가변값인 경우도 있지만, 설정에 따라 변경 불가능한 경우도 있고, 불변값으로 활용되는 경우도 있다.
 
-- 예제, 참조형 데이터의 할당
+- 예제 1, 참조형 데이터의 할당
 
 ```js
 var obj1 = {
@@ -142,7 +144,7 @@ var obj1 = {
 };
 ```
 
-참조형 데이터는 기본형 데이터와 다르게 '객체의 변수(프로퍼티) 영역'(아래 표에서 객체 @5001의 변수 영역)이 별도로 존재한다. 참조형 데이터도 기본형 데이터와 마찬가지로 데이터 영역의 불변값들을 변경하지 못 하지만, 각각의 변수에는 다른 값들을 할당할 수 있기 때문에 참조형 데이터를 불변하지 않다(가변값이다)라고 한다.
+참조형 데이터는 기본형 데이터와 다르게 <b>'객체의 변수(프로퍼티) 영역'</b>(아래 표에서 객체 @5001의 변수 영역)이 별도로 존재한다. 참조형 데이터도 기본형 데이터와 마찬가지로 데이터 영역의 불변값들을 변경하지 못 하지만, 각각의 변수에는 다른 값들을 할당할 수 있기 때문에 참조형 데이터를 불변하지 않다(가변값이다)라고 한다.
 
 |:---:|:---:|:---:|:---:|:---:|:---:|
 |주소|1001|1002|1003|1004|···|
@@ -152,6 +154,7 @@ var obj1 = {
 |주소|7001|7002|7003|7004|···|
 |데이터|   |   |이름: a<br>값: @5003<br>(객체 @5001의 변수 영역)|이름: b<br>값: @5004|   |
 
+- 예제 1의 `obj1.a` 를 `obj1.a = 2` 로 obj1.a에 2를 할당하면 ojb1이 바라보고 있는 주소는 @5001로 변하지 않는다.
+- 참조형 데이터의 프로퍼티에 다시 참조형 데이터를 할당하는 경우(중첩 객체)에도, 중첩 객체에 재할당 명령을 내리면 데이터 영역의 불볍값은 변하지 않지만, 변수에는 다른 값들을 할당할 수 있다.
 
-
-
+<!--more-->
