--- a/_posts/2022-12-12-second.md
+++ b/_posts/2022-12-12-second.md
@@ -2,7 +2,9 @@
 layout: single
 title: "CS50 2020 - Lecture 0 - Scratch"
 categories: CS50
+tag: [CS50]
 toc : true
+toc_sticky: true
 toc_label: " "
 toc_icon: " " 
 ---
