--- a/_posts/2022-12-15-algorithm1.md
+++ b/_posts/2022-12-15-algorithm1.md
@@ -9,6 +9,7 @@ toc_label: " "
 toc_icon: " " 
 header:
   teaser: /assets/images/알고리즘.png
+excerpt_separator: <!--more-->
 ---
 
 문제를 읽고 우선 return 할 변수 answer가 어떤 경우에 증가할지 경우에 따라서 나눈 후 문제를 풀었다.
@@ -41,3 +42,5 @@ console.log(solution([1,2])); // 1
 console.log(solution([3,6])); // 5
 console.log(solution([11,7])); // 13
 ```
+
+<!--more-->
