--- a/_posts/2022-12-16-algorithm2.md
+++ b/_posts/2022-12-16-algorithm2.md
@@ -9,6 +9,7 @@ toc_label: " "
 toc_icon: " " 
 header:
   teaser: /assets/images/알고리즘.png
+excerpt_separator: <!--more-->
 ---
 
 ## 알고리즘 풀이 방식
@@ -54,3 +55,4 @@ console.log(solution([[-1, -1], [1, 1], [1, -1], [-1, 1]])); // 4
 // 프로그래머스 채점 통과
 ```
 
+<!--more-->
