--- a/_posts/2022-12-17-algorithm3.md
+++ b/_posts/2022-12-17-algorithm3.md
@@ -9,6 +9,7 @@ toc_label: " "
 toc_icon: " " 
 header:
   teaser: /assets/images/알고리즘.png
+excerpt_separator: <!--more-->
 ---
 
 ## 알고리즘 구현 과정
@@ -17,6 +18,7 @@ header:
 프리코스 때 배웠던 정렬 관련 문제로 추정되지만, 정확히 어떤 방식으로 풀어나가야 될지 감이 잡히지 않았다.  
 이렇게 제한 시간 내에 풀지 못하면 시간이 더 있어도 문제를 제대로 풀 확률이 매우 적기 때문에, 앞으로도 이럴 경우 다른 풀이를 보지 않고 동일 문제를 1주일 내에 다시 풀어볼 예정이다.  
 그리고 주어진 1주일이라는 기간 동안 정렬 공부도 하고 다른 알고리즘도 풀어보면서 이 문제의 접근 방식에 대해 고민할 생각이다.
+
 
 ## 알고리즘 
 
@@ -48,3 +50,5 @@ function solution(score) {
 }
 console.log(solution([[80, 70], [70, 80], [30, 50], [90, 100], [100, 90], [100, 100], [10, 30]]));
 ```
+
+<!--more-->
